# gko_minreproducer

./: CMakeLists.txt  README.md  Readme.md  collmatrix_converge.cpp  debug_gko.cpp  ginko_env.sh
collisionsdata/: ell_0.mtx  ell_1.mtx  ell_3.mtx  ell_5.mtx  ell_6.mtx  ell_8.mtx  rhs1.mtx  rhs2.mtx  rhs3.mtx  rhs6.mtx  rhs8.mtx  rhs9.mtx
